Avoid badge flickering

--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -69,6 +69,7 @@ header
   .github-badges
     text-align: center
     margin-top: 2em
+    height: 24px
 
 @-webkit-keyframes highlight
   0%
